Many careful changes and tweaks to make sure things work on firefox, ie and chrome.

--- a/app/styles/less/file-browser.less
+++ b/app/styles/less/file-browser.less
@@ -12,6 +12,7 @@ div[role=browser] {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  z-index: 200;
 
   -webkit-flex: 0 0 140px;
   flex: 0 0 140px;
