--- a/app/styles/less/shelf.less
+++ b/app/styles/less/shelf.less
@@ -35,6 +35,7 @@ div[role=shelf] > div[role=shelf-tab] {
   border-top: 1px solid rgb(48,83,110);
   border-left: 1px solid rgb(48,83,110);
   border-radius: 2px 0 0 0;
+  white-space: nowrap;
   cursor: pointer;
 }
 
